# VentureValidator

./: .env  .gitignore  compose.yml  package-lock.json
.devcontainer/: devcontainer.json
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  pre_start.py  prompts.py
backend/app/api/: main.py
backend/app/api/routes/: llm.py  model.py
backend/app/core/: config.py  ollama.py
backend/scripts/: prestart.sh
frontend/: .prettierignore  components.json  eslint.config.mjs  package-lock.json  package.json  tailwind.config.js
frontend/src/: app2.js
frontend/src/components/: CategoryInput.tsx  ListOptions.tsx  ShoppingList.tsx  ShoppingListPlanner.tsx  canvas.tsx  canvasCard.tsx
frontend/src/pages/: index.tsx
frontend/src/styles/: globals.css
